-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
The "class_list_match_sane()" function causes strncpy truncation warnings:
https://github.com/openjdk/valhalla/commit/cab7a5b928940dc5d0e616f15439ad6d546120ed#diff-d54bb66c79c376b25a254d6dbe198218R298
Further, this is a test function, belongs in gtest:
test/hotspot/gtest/utilities/test_stringUtils.cpp
https://github.com/openjdk/valhalla/commit/cab7a5b928940dc5d0e616f15439ad6d546120ed#diff-d54bb66c79c376b25a254d6dbe198218R298
Further, this is a test function, belongs in gtest:
test/hotspot/gtest/utilities/test_stringUtils.cpp
- relates to
-
JDK-8242349 [lworld] Introduce more stringUtils.cpp testing
-
- Closed
-