8242344: [lworld] JDK-8236522 class_list_match_sane() introduced strncpy truncation warnings